--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="login_button">Log In</string>
+    <string name="title_activity_add_card">AddCardActivity</string>
 </resources>
